fix overflow mask

--- a/packages/ui/app/src/commons/HorizontalOverflowMask.scss
+++ b/packages/ui/app/src/commons/HorizontalOverflowMask.scss
@@ -5,11 +5,12 @@
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .fern-x-overflow {
+    @apply overflow-x-auto;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
 }
 
-.fern-x-overflow:not(.left-mask):hover > * {
+.fern-x-overflow:not(.left-mask):hover {
     animation-name: bounce-left;
     animation-duration: 0.5s;
     animation-timing-function: ease;
